[package]
name = "blaze"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.20", features = [ "aio", "tokio-comp" ] }
tokio = { version = "1", features = [ "full" ] }
futures = "0.3"
sha-1 = "0.9"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
